--- a/checkout.html
+++ b/checkout.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/4bd251a57a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="wrapper">
+<div class="app">
     <div class="top">
         <header class="header center">
             <div class="header__left">
