--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/4bd251a57a.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="app">
+<div class="wrapper" id="app">
     <div class="top">
         <header class="header center">
             <div class="header__left">
@@ -53,8 +53,7 @@
                             </div>
                         </div>
                     </details>
-                    <input type="text" class="text_search" placeholder="Search for item...">
-                    <button class="search_button"><img src="img/search_image.png" alt="search_image"></button>
+                    <filter-el></filter-el>
                 </form>
             </div>
             <div class="header__right">
@@ -424,7 +423,7 @@
                 <h2 class="coup_title">coupon discount</h2>
                 <p class="coup_text">Enter your coupon code if you have one</p>
                 <input type="text" class="text_view" placeholder="State">
-                <div class="coup__butt2 text__coupon_position">Apply coupon</div>
+                <div class="coup__butt2 text__coupon_position">wrapperly coupon</div>
             </div>
             <div class="coup_block3">
                 <div class="coup__sub_block3">
@@ -511,7 +510,7 @@
                     <li class="new_menu_list"><a href="Product.html" class="new_menu_link">Men</a></li>
                     <li class="new_menu_list"><a href="single_page.html" class="new_menu_link">Women</a></li>
                     <li class="new_menu_list"><a href="#" class="new_menu_link">Child</a></li>
-                    <li class="new_menu_list"><a href="#" class="new_menu_link">Apparel</a></li>
+                    <li class="new_menu_list"><a href="#" class="new_menu_link">wrapperarel</a></li>
                     <li class="new_menu_list"><a href="#" class="new_menu_link">Brows All</a></li>
                 </ul>
             </nav>
@@ -529,4 +528,9 @@
     </footer>
 </div>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/FilterComp.js"></script>
+<script src="js/ErrorComp.js"></script>
+<script src="js/main.js"></script>
 </html>
