--- a/Product.html
+++ b/Product.html
@@ -57,54 +57,45 @@
                 </form>
             </div>
             <div class="header__right">
+                <button class="cart_summary" type="button"><img class="header__cart" src="img/cart.svg"
+                                                  alt="cart">
+                </button>
+                <div class="drop__cart">
 
-                <ul>
-                    <li class="cart_summary"><a href="shopping_cart.html"><img class="header__cart" src="img/cart.svg"
-                                                                               alt="cart"></a>
-                        <div class="drop__cart">
-                            <div class="drop__flex">
-                                <ul class="drop__il">
-                                    <li class="drop__list drop__list_cart">
-                                        <div class="cart__content">
-                                            <a href="single_page.html" class="drop__link cart__product">
-                                                <div class="cart__image__content content__1"></div>
-                                                <div class="cart__text_content">
-                                                    <p class="cart__text_1">Rebox Zane</p> <img src="img/stars.png"
-                                                                                                alt="stars"
-                                                                                                class="stars">
-                                                    <p class="cart__price_2">1 x $250</p>
-                                                </div>
-                                            </a> <a href="#" class="delete_cart_item"><i
-                                                class="fas fa-times-circle"></i></a>
+                                <div class="cart__content">
+                                    <a href="single_page.html" class="drop__link cart__product">
+                                        <div class="cart__image__content content__1"></div>
+                                        <div class="cart__text_content">
+                                            <p class="cart__text_1">Rebox Zane</p> <img src="img/stars.png"
+                                                                                        alt="stars"
+                                                                                        class="stars">
+                                            <p class="cart__price_2">1 x $250</p>
                                         </div>
-                                    </li>
-                                    <li class="drop__list drop__list_cart">
-                                        <div class="cart__content">
-                                            <a href="single_page.html" class="drop__link cart__product">
-                                                <div class="cart__image__content content__2"></div>
-                                                <div class="cart__text_content">
-                                                    <p class="cart__text_1">Rebox Zane</p> <img src="img/stars.png"
-                                                                                                alt="stars"
-                                                                                                class="stars">
-                                                    <p class="cart__price_2">1 x $250</p>
-                                                </div>
-                                            </a> <a href="#" class="delete_cart_item"><i
-                                                class="fas fa-times-circle"></i></a>
-                                        </div>
-                                    </li>
-                                </ul>
-                                <div class="total">
-                                    <p class="text__total">total</p>
-                                    <p class="summ">$500.00</p>
+                                    </a> <a href="#" class="delete_cart_item"><i
+                                        class="fas fa-times-circle"></i></a>
                                 </div>
-                                <a href="checkout.html" class="cart__button_sub">Checkout</a>
-                                <a href="shopping_cart.html" class="cart__button_sub last__button">Go to cart</a>
 
-                            </div>
+
+                                <div class="cart__content">
+                                    <a href="single_page.html" class="drop__link cart__product">
+                                        <div class="cart__image__content content__2"></div>
+                                        <div class="cart__text_content">
+                                            <p class="cart__text_1">Rebox Zane</p> <img src="img/stars.png"
+                                                                                        alt="stars"
+                                                                                        class="stars">
+                                            <p class="cart__price_2">1 x $250</p>
+                                        </div>
+                                    </a> <a href="#" class="delete_cart_item"><i
+                                        class="fas fa-times-circle"></i></a>
+                                </div>
+
+                        <div class="total">
+                            <p class="text__total">total</p>
+                            <p class="summ">$500.00</p>
                         </div>
-                    </li>
-                </ul>
-
+                        <a href="checkout.html" class="cart__button_sub">Checkout</a>
+                        <a href="shopping_cart.html" class="cart__button_sub last__button">Go to cart</a>
+                </div>
                 <a href="#" class="button">My accaunt<img src="img/white_arrow.png" alt="white_arrow"
                                                           class="white_arrow"></a>
             </div>
@@ -759,6 +750,8 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/cartComp.js"></script>
+<script src="js/ProductComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
 <script src="js/main.js"></script>
