--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -530,6 +530,8 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/cartComp.js"></script>
+<script src="js/ProductComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
 <script src="js/main.js"></script>
