work on new json save variant

--- a/Product.html
+++ b/Product.html
@@ -418,168 +418,8 @@
                     </div>
                 </div>
                 <div class="products_sort ">
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content1.jpg" alt="photo___1"
-                                                           class="photo___1 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content2.jpg" alt="photo___2"
-                                                           class="photo___2 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content3.jpg" alt="photo___3"
-                                                           class="photo___3 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content4.jpg" alt="photo___4"
-                                                           class="photo___4 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content5.jpg" alt="photo___5"
-                                                           class="photo___5 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content6.jpg" alt="photo___6"
-                                                           class="photo___6 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content7.jpg" alt="photo___7"
-                                                           class="photo___7 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content8.jpg" alt="photo___8"
-                                                           class="photo___8 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
-                    <div class="featured_link product_link">
-                        <div class="block__featured">
-                            <div class="block__self1"><img src="img/product_content9.jpg" alt="photo___9"
-                                                           class="photo___9 product__photo">
-                                <a href="single_page.html" class="cart__hover"> <img src="img/cart_hover.svg"
-                                                                                     alt="cart_hover_img"
-                                                                                     class="cart_hover_img">
-                                    <p class="hover_text">Add to Cart</p>
-                                </a>
-                                <div class="sub__hover">
-                                    <a href="#" class="box__sub_button sub__left"></a>
-                                    <a href="#" class="box__sub_button sub__right"></a>
-                                </div>
-                            </div>
-                            <p class="featured_text">Mango People T-shirt</p>
-                            <p class="featured_text2">$52.00</p>
-                        </div>
-                    </div>
+                    <products ref="products"></products>
+                    <error ref="error"></error>
                 </div>
                 <div class="footer__for_product ">
                     <div class="letters">
