--- a/single_page.html
+++ b/single_page.html
@@ -383,53 +383,8 @@
         <div class="like_also center">
             <h2 class="like__also_title">you may like also</h2>
             <div class="like__also_content">
-                <div class="featured_link">
-                    <div class="block__featured">
-                        <div class="block__self3"><img src="img/girl_cost1.jpg" alt="photo___3" class="photo___3">
-                            <a href="#" class="cart__hover"> <img src="img/cart_hover.svg" alt="cart_hover_img"
-                                                                  class="cart_hover_img">
-                                <p class="hover_text">Add to Cart</p>
-                            </a>
-                        </div>
-                        <p class="like__also_product">Mango People T-shirt</p>
-                        <p class="featured_text2">$52.00</p>
-                    </div>
-                </div>
-                <div class="featured_link">
-                    <div class="block__featured">
-                        <div class="block__self3"><img src="img/girl_cost2.jpg" alt="photo___3" class="photo___3">
-                            <a href="#" class="cart__hover"> <img src="img/cart_hover.svg" alt="cart_hover_img"
-                                                                  class="cart_hover_img">
-                                <p class="hover_text">Add to Cart</p>
-                            </a>
-                        </div>
-                        <p class="like__also_product">Mango People T-shirt</p>
-                        <p class="featured_text2">$52.00</p>
-                    </div>
-                </div>
-                <div class="featured_link">
-                    <div class="block__featured">
-                        <div class="block__self3"><img src="img/girl_cost3.jpg" alt="photo___3" class="photo___3">
-                            <a href="#" class="cart__hover"> <img src="img/cart_hover.svg" alt="cart_hover_img"
-                                                                  class="cart_hover_img">
-                                <p class="hover_text">Add to Cart</p>
-                            </a>
-                        </div>
-                        <p class="like__also_product">Mango People T-shirt</p>
-                        <p class="featured_text2">$52.00</p>
-                    </div>
-                </div>
-                <div class="featured_link">
-                    <div class="block__featured">
-                        <div class="block__self3"><img src="img/girl_cost4.jpg" alt="photo___3" class="photo___3">
-                            <a href="#" class="cart__hover"> <img src="img/cart_hover.svg" alt="cart_hover_img"
-                                                                  class="cart_hover_img">
-                                <p class="hover_text">Add to Cart</p>
-                            </a>
-                        </div>
-                        <p class="like__also_product">Mango People T-shirt</p>
-                        <p class="featured_text2">$52.00</p>
-                    </div>
+                <products ref="products-single"></products>
+                <error ref="error"></error>
                 </div>
             </div>
         </div>
