--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/cartComp.js"></script>
+<script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
