--- a/single_page.html
+++ b/single_page.html
@@ -383,7 +383,7 @@
         <div class="like_also center">
             <h2 class="like__also_title">you may like also</h2>
             <div class="like__also_content">
-                <products ref="products-single"></products>
+                <products ref="products_single"></products>
                 <error ref="error"></error>
                 </div>
             </div>
@@ -480,6 +480,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/cartComp.js"></script>
+<script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
