save new products for shopping list

--- a/checkout.html
+++ b/checkout.html
@@ -408,6 +408,7 @@
 <script src="js/cartComp.js"></script>
 <script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
+<script src="js/FilterSingleComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
 <script src="js/main.js"></script>
