--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -392,6 +392,10 @@
                 <div class="to__checkout text__coupon_position">proceed to checkout</div>
             </div>
         </div>
+        <div class="new-block-for-products center">
+            <products ref="products"></products>
+            <error ref="error"></error>
+        </div>
     </div>
     <footer class="footer">
         <div class="beach_color">
@@ -486,6 +490,7 @@
 <script src="js/cartComp.js"></script>
 <script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
+<script src="js/FilterSingleComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
 <script src="js/main.js"></script>
