--- a/single_page.html
+++ b/single_page.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </details>
-                    <filter-el></filter-el>
+                    <filter-single-el></filter-single-el>
                 </form>
             </div>
             <div class="header__right">
@@ -382,10 +382,8 @@
         <div class="women__space"></div>
         <div class="like_also center">
             <h2 class="like__also_title">you may like also</h2>
-            <div class="like__also_content">
-                <products ref="products_single"></products>
+                <products_single ref="products_single"></products_single>
                 <error ref="error"></error>
-                </div>
             </div>
         </div>
     </div>
@@ -482,6 +480,7 @@
 <script src="js/cartComp.js"></script>
 <script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
+<script src="js/FilterSingleComp.js"></script>
 <script src="js/FilterComp.js"></script>
 <script src="js/ErrorComp.js"></script>
 <script src="js/main.js"></script>
