--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -57,7 +57,7 @@
                 </form>
             </div>
             <div class="header__right">
-                <cart ref="cart"></cart>
+                <cart_shopping ref="cart_shopping"></cart_shopping>
                 <a href="#" class="button">My accaunt<img src="img/white_arrow.png" alt="white_arrow"
                                                           class="white_arrow"></a>
             </div>
@@ -393,7 +393,7 @@
             </div>
         </div>
         <div class="new-block-for-products center">
-            <products ref="products"></products>
+            <products_shopping ref="products"></products_shopping>
             <error ref="error"></error>
         </div>
     </div>
@@ -487,7 +487,9 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/cartShoppingComp.js"></script>
 <script src="js/cartComp.js"></script>
+<script src="js/ProductShoppingComp.js"></script>
 <script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
 <script src="js/FilterSingleComp.js"></script>
