--- a/single_page.html
+++ b/single_page.html
@@ -477,7 +477,9 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/cartShoppingComp.js"></script>
 <script src="js/cartComp.js"></script>
+<script src="js/ProductShoppingComp.js"></script>
 <script src="js/ProductSingleComp.js"></script>
 <script src="js/ProductComp.js"></script>
 <script src="js/FilterSingleComp.js"></script>
