create new link for catalog products

--- a/single_page.html
+++ b/single_page.html
@@ -263,7 +263,7 @@
                         <div class="bottom__w"></div>
                         <div class="bottom__w2"></div>
                     </div>
-                    <h2 class="w__text_moshino">Moschino Cheap And Chic</h2>
+                    <h2 class="w__text_moshino">Mango People t-shirt</h2>
                     <p class="w__text">Compellingly actualize fully researched processes before proactive outsourcing.
                         Progressively syndicate collaborative architectures before cutting-edge services. Completely
                         visualize
@@ -278,7 +278,7 @@
                             <span class="w__design">BINBURHAN</span>
                         </div>
                     </div>
-                    <p class="w__price">$561</p>
+                    <p class="w__price">$52</p>
                 </article>
                 <div class="bottom__block">
                     <div class="summares_bottom__block">
