updated single pages and links

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                     </details>
-                    <filter-el></filter-el>
+                    <filter-shopping-el></filter-shopping-el>
                 </form>
             </div>
             <div class="header__right">
@@ -386,8 +386,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="js/cartShoppingComp.js"></script>
 <script src="js/ProductShoppingComp.js"></script>
-<script src="js/FilterSingleComp.js"></script>
-<script src="js/FilterComp.js"></script>
+<script src="js/FilterShoppingComp.js"></script>
 <script src="js/ErrorComp.js"></script>
 <script src="js/main.js"></script>
 </html>
