--- a/single_page12.html
+++ b/single_page12.html
@@ -251,7 +251,7 @@
             <div class="women_main_content">
                 <a href="#" class="women_slider_element"><i
                         class="fas fa-chevron-left slider_arrow fa-chevron-left-women"></i></a>
-                <img src="img/women_main_img.jpg" alt="women_main_img" class="women_main_img">
+                <img src="img/product_content2.jpg" alt="women_main_img" class="women_main_img">
                 <a href="#" class="women_slider_element"><i
                         class="fas fa-chevron-right slider_arrow fa-chevron-right-women"></i></a>
             </div>
